una pequeña modificación al proyecto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Prueba</title>
 </head>
 <body>
-    
+    <h1>Hola esta es una modificación</h1>
+    <h2>Esto es todo, gracias</h2>
 </body>
 </html>
